[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Main Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/Icons/White/2x/musicOn.png" type="Texture" id=3]
[ext_resource path="res://assets/Icons/White/2x/musicOff.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 74
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10.8, -10.8 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.8 ]
}

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 600.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 30.0
margin_right = 220.0
margin_bottom = 123.0
rect_rotation = -10.8
rect_pivot_offset = Vector2( 236, 52 )
custom_fonts/font = SubResource( 1 )
text = "Realm Shift"

[node name="Version" type="Label" parent="."]
margin_left = 3.0
margin_right = 67.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "V1.0"

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = -43.0
margin_right = 82.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "Play"
flat = true

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -510.0
margin_top = -88.0
margin_right = -346.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="SpeedRun" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -166.0
margin_top = -174.0
margin_right = 166.0
margin_bottom = -88.0
custom_fonts/font = SubResource( 3 )
text = "Speedrun"
flat = true

[node name="Mute" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -88.0
margin_right = 8.0
margin_bottom = 12.0
texture_normal = ExtResource( 3 )
expand = true

[node name="Unmute" type="TextureButton" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -92.0
margin_top = -88.0
margin_right = 8.0
margin_bottom = 12.0
texture_normal = ExtResource( 4 )
expand = true

[node name="Title_Animation" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="SpeedRun" to="." method="_on_SpeedRun_pressed"]
[connection signal="pressed" from="Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="Unmute" to="." method="_on_Unmute_pressed"]
